Added requirments and gitignore, took out validation in update

--- a/templates/edit_account.html
+++ b/templates/edit_account.html
@@ -13,6 +13,6 @@
       <dd><input type=text name=password value="{{
         request.form.password }}">
     </dl>
-    <p><input type=submit value=Login>
+    <p><input type=submit value=Edit>
   </form>
 {% endblock %}
