--- a/templates/login.html
+++ b/templates/login.html
@@ -8,9 +8,9 @@
     <dl>
       <dt>Username:
       <dd><input type=text name=username value="{{
-          request.form.username }}">
+          request.form.username }}"> (code authenticates on username "admin")
       <dt>Password:
-      <dd><input type=text name=password>
+      <dd><input type=text name=password> (code authenticates on password "secret")
     </dl>
     <p><input type=submit value=Login>
   </form>
